--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
